RESOLVED FIXED278833
REGRESSION (282704@main): [ macOS wk2 ] media/media-vp8-hiddenframes.html is a flaky image only failure.
https://bugs.webkit.org/show_bug.cgi?id=278833
Summary REGRESSION (282704@main): [ macOS wk2 ] media/media-vp8-hiddenframes.html is ...
Anfernee Viduya
Reported 2024-08-28 19:13:33 PDT
Created attachment 472341 [details] Diff media/media-vp8-hiddenframes.html is a flaky image only failure with a pixel diff of 0.36%. HISTORY: https://results.webkit.org/?suite=layout-tests&test=media%2Fmedia-vp8-hiddenframes.html&platform=ios&platform=mac&architecture=x86_64&architecture=arm64&version_name=Sonoma&version_name=Ventura&style=debug&style=release LINK TO DIFF: https://build.webkit.org/results/Apple-Sonoma-Release-WK2-Tests/282859%40main%20(4353)/media/media-vp8-hiddenframes-diff.png REPRODUCIBILITY: I was able to reproduce the issue on ToT using command run-webkit-test media/media-vp8-hiddenframes.html --debug --iterations=20 DESCRIPTION: On 282704@main the skip expectation was removed for this test.
Attachments
Diff (34.48 KB, image/png)
2024-08-28 19:13 PDT, Anfernee Viduya
no flags
Radar WebKit Bug Importer
Comment 1 2024-08-28 19:13:43 PDT
EWS
Comment 2 2024-08-28 19:34:58 PDT
Test gardening commit 282877@main (ee1ceb664788): <https://commits.webkit.org/282877@main> Reviewed commits have been landed. Closing PR #32864 and removing active labels.
Anfernee Viduya
Comment 3 2024-08-28 19:35:41 PDT
Set test expectations with the above commit.
Jean-Yves Avenard [:jya]
Comment 4 2024-11-07 05:30:12 PST
*** Bug 282742 has been marked as a duplicate of this bug. ***
Jean-Yves Avenard [:jya]
Comment 5 2024-11-07 08:08:31 PST
EWS
Comment 6 2024-11-08 05:21:23 PST
Committed 286329@main (2cdde9cb8a0d): <https://commits.webkit.org/286329@main> Reviewed commits have been landed. Closing PR #36330 and removing active labels.
EWS
Comment 7 2024-12-03 08:13:34 PST
Committed 283286.550@safari-7620-branch (e5f3927d32d1): <https://commits.webkit.org/283286.550@safari-7620-branch> Reviewed commits have been landed. Closing PR #2358 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.